[package]
name = "fetlock"
version = "0.1.0"
authors = ["Tim Cuthbertson <tim@gfxmonk.net>"]
edition = "2018"

[[bin]]
name = "fetlock"
path = "src/bin/fetlock.rs"

[dependencies]
async-trait = "0.1.42"
either = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# pretty = "0.10"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1.2", features = ["full"] }
getopts = "0.2"
sha2 = "0.9"
hex = "0.4"
log = "0.4"
regex = "1.4"
reqwest = "0.11"
tempdir = "0.3"
lazy_static = "1"
env_logger = "0.7"
nom = "6"
fs2 = "0.4"
cargo_metadata = "0.14"
cargo-platform = "0.1"
platforms = "1"
clap = "3.0.0-beta.5"
# crates-index = { version = "0.17", features = ["vendored-openssl"] }
